fix: add missing color variable and class for most white color in globals.css

--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -8,6 +8,7 @@
     --color-primary: #ff5e2d;
     --color-off: #e1d9d6;
     --color-on: #43424a;
+    --color-most-white: #fefefe;
 }
 
 /* Main Color */
@@ -38,6 +39,11 @@
 /* On Color */
 .on-color {
     color: var(--color-on);
+}
+
+/* Most White Color */
+.most-white {
+    color: var(--color-most-white);
 }
 
 /* Drop Shadow */
